Added a gradle task that will create a mac app of scs2 (#252)